--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <span>O</span>
     </div>
     <div class="description">
-        <span>Iffah ku ada hadiah biar tambah semangat!!</span>
+        <span>fah ku ada hadiah biar tambah semangat!!</span>
     </div>
     <div class="button">
         <button>
